# radiation

./: .antigen.cfg  .flake8  .mypy.ini  .radiation.cfg  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: build.yml  ci.yml  lint-and-test.yml  mutate.yml
antigen/: __init__.py  antigen.py  context.py  gen.py  mutation.py  types.py
antigen/filters/: __init__.py  line_limit.py  patch.py
antigen/mutators/: __init__.py  binops.py  boolops.py  compare.py  constants.py  invert.py  unaryops.py
antigen/runners/: __init__.py  tempdir.py
antigen_cli/: config.py  main.py  utils.py
radiation/: __init__.py  config.py  mutation.py  radiation.py  types.py
radiation/filters/: __init__.py  patch.py
radiation/mutators/: compare.py  constants.py  invert.py
radiation/runners/: __init__.py  tempdir.py
radiation_cli/: config.py  main.py  utils.py
tests/test_antigen/: test_antigen.py  test_gen.py  test_mutation.py  utils.py
tests/test_antigen/test_filters/: test_line_limit.py  test_patch.py
tests/test_antigen/test_mutators/: conftest.py  test_binops.py  test_boolops.py  test_compare.py  test_constants.py  test_invert.py  test_unaryops.py  utils.py
tests/test_antigen/test_runners/: test_tempdir.py
tests/test_radiation/: test_gen.py  test_mutation.py  test_radiation.py  utils.py
tests/test_radiation/test_filters/: test_line_limit.py  test_patch.py
tests/test_radiation/test_mutators/: conftest.py  test_binops.py  test_boolops.py  test_compare.py  test_constants.py  test_invert.py  test_unaryops.py
tests/test_radiation/test_runners/: test_tempdir.py
tests/test_radiation_cli/: test_config.py  test_main.py  test_utils.py
