[tool.poetry]
name = "antigen"
version = "0.1.0"
description = ""
authors = ["Yanay Goor <yanay.goor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
setuptools = "^62.1.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
flake8-isort = "^4.1.1"
flake8-black = "^0.3.2"
flake8-bugbear = "^22.3.23"
mypy = "^0.942"
astunparse = "^1.6.3"
types-pkg-resources = "^0.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
