[tool.poetry]
name = "radiation"
version = "0.2.0"
description = "Extendable mutation testing framework"
authors = ["Yanay Goor <yanay.goor@gmail.com>"]
license = "MIT"

readme = "README.md"
homepage = "https://github.com/radiation-mutations/radiation"
repository = "https://github.com/radiation-mutations/radiation"
documentation = "https://github.com/radiation-mutations/radiation"

keywords = ["testing", "mutation"]

[tool.poetry.scripts]
radiation = 'radiation_cli.main:cli'

[tool.poetry.dependencies]
python = "^3.8"
setuptools = "^62.1.0"
whatthepatch = "^1.0.2"
click = "^8.1.2"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
flake8-isort = "^4.1.1"
flake8-black = "^0.3.2"
flake8-bugbear = "^22.3.23"
mypy = "^0.942"
astunparse = "^1.6.3"
types-pkg-resources = "^0.1.3"
autoflake = "^1.4"
types-whatthepatch = "^1.0.0"
types-toml = "^0.10.5"
pytest = "^7.1.1"
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
